--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^3.7.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sanitize-html": "^2.8.1"
   }
 }
