--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-.idea
+.idea/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
